--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
             "skipDisplayBlock": true
         },
         "angular-*": {
-            "externalTemplate": true
+            "externalTemplate": true,
+            "skipStyle": true
         }
     }
 }
