--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "dotenv": "^16.4.5",
     "electron-reload": "^2.0.0-alpha.1",
-    "mongodb": "^6.7.0",
+    "mongoose": "^8.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
@@ -39,7 +39,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.17",
-    "electron": "^28.1.4",
+    "electron": "31.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
